# neural-concepts-team-E

./: .gitignore  main.py  pyproject.toml
data/cleaned_transcripts/: APPL-Q4-2025_transcript.txt  DE-Q4-2025_transcript.txt  NFLX-Q4-2025_transcript.txt
data_cleaning/: README.md
interact_with_model/: analysis.py  preds.jsonl  uncertainty.jsonl  uncertainty_probe_gemma2.py
labs/week2/: neuronpedia_explorer.ipynb
notebooks/: earnings_calls_html_cleaning.ipynb  gemma_9b_sae_feature_activation.ipynb  sample-input.json  uncertainty_classifier.ipynb
