[project]
name = "neural-concepts-team-e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "neuronpedia>=1.2.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "polars>=1.37.1",
    "requests>=2.32.5",
]
